GMM_Main/src/objects/Contract.object
<CustomObject>
    <fields>
        <fullName>Accepted_Date__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Accepted Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Applicant1__c</fullName>
        <label>Applicant Type</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Applicant_Delinquent_on_any_Federal_Debt__c</fullName>
        <inlineHelpText>Is the Applicant Delinquent on any Federal Debt?</inlineHelpText>
        <label>Applicant Delinquent on any Federal Debt</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>no</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Applicant_Identifier__c</fullName>
        <description>Applicant Identifier</description>
        <inlineHelpText>Applicant Identifier</inlineHelpText>
        <label>Applicant Identifier</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Applicant__c</fullName>
        <label>Applicant</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Delinquent_on_Federal_Debt__c</fullName>
        <label>Application Delinquent on Federal Debt?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Application_Type2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Organization Type</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contracts (Application Type)</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Areas_Affected_by_Project_Cities_Coutn__c</fullName>
        <description>Please enter Areas Affected by Project (Cities, Coutnies, States, etc)</description>
        <inlineHelpText>Please enter Areas Affected by Project (Cities, Coutnies, States, etc)</inlineHelpText>
        <label>Areas Affected by Project</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Areas_Affected_by_Project__c</fullName>
        <label>Areas Affected by Project</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CFDA_Number__c</fullName>
        <formula>NOFA_RFP_ID__r.CFDA_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CFDA Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CFDA_Title__c</fullName>
        <description>CFDA Title</description>
        <inlineHelpText>CFDA Title</inlineHelpText>
        <label>CFDA Title</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Certification__c</fullName>
        <defaultValue>&quot;By signing this application, I certify (1) to the statements contained in the list of certifications and (2) that the statements herein are true, complete and accurate to the best of my knowledge.  I also provide the required assurances and agree to comply with any resulting terms if I accept an award.  I am aware that any false, fictitious, or fraudulent statements or claims may subject me to criminal, civil, or administrative penalties.  (U.S. Code, Title 218, Section 1001).The list of certifications and assurances, or an internet site where you may obtain this list, is contained in the announcement or agency specific instructions.&quot;</defaultValue>
        <description>Certification</description>
        <inlineHelpText>Certification</inlineHelpText>
        <label>Certification</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <formula>Account.City__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competition_Identification_Number__c</fullName>
        <label>Competition Identification Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Congressional_Districts_Of__c</fullName>
        <label>Congressional Districts Of</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <description>County</description>
        <inlineHelpText>Please enter County</inlineHelpText>
        <label>County</label>
        <length>88</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Received__c</fullName>
        <description>Date Received</description>
        <inlineHelpText>Date Received</inlineHelpText>
        <label>Date Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Received_by_State__c</fullName>
        <description>Date Received by State</description>
        <inlineHelpText>Date Received by State</inlineHelpText>
        <label>Date Received by State</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Signed__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <description>Date Signed</description>
        <label>Date Signed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Review__c</fullName>
        <label>Date of Review</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Department_Name__c</fullName>
        <label>Department Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division_Name__c</fullName>
        <label>Division Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email1__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>Email</description>
        <inlineHelpText>Please enter your email</inlineHelpText>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>End_of_Review__c</fullName>
        <inlineHelpText>Please select End of Review</inlineHelpText>
        <label>End of Review</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Fax_Number1__c</fullName>
        <description>Fax Number</description>
        <label>Fax Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Fax_Number__c</fullName>
        <description>Fax Number</description>
        <inlineHelpText>Please enter your Fax Number</inlineHelpText>
        <label>Fax Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Federal_Award_Identifier__c</fullName>
        <description>Federal Award Identifier</description>
        <inlineHelpText>Please enter Federal Award Identifier</inlineHelpText>
        <label>Federal Award Identifier</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Federal_Entity_Identifier__c</fullName>
        <description>Federal Entity Identifier</description>
        <inlineHelpText>Please enter Federal Entity Identifier</inlineHelpText>
        <label>Federal Entity Identifier</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Federal__c</fullName>
        <label>Federal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Funding_Opportunity_Title__c</fullName>
        <label>Funding Opportunity Title</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>I_AGREE__c</fullName>
        <defaultValue>false</defaultValue>
        <description>I Agree</description>
        <inlineHelpText>I Agree</inlineHelpText>
        <label>I AGREE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>I_have_read_agreed_to_the_Terms__c</fullName>
        <defaultValue>false</defaultValue>
        <label>I have read &amp; agreed to the &apos;Terms&apos;</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>I_have_understood_the_Terms__c</fullName>
        <defaultValue>false</defaultValue>
        <label>I have understood the Terms</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>If_Yes__c</fullName>
        <description>If,Yes</description>
        <inlineHelpText>If,Yes</inlineHelpText>
        <label>If “Yes,” Please Explain</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_Yes_date__c</fullName>
        <label>If “Yes,” Please Specify Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>If_other_Comments__c</fullName>
        <description>If other, Comments</description>
        <inlineHelpText>Please add Comments If other is selected</inlineHelpText>
        <label>If other, Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name1__c</fullName>
        <inlineHelpText>Last Name</inlineHelpText>
        <label>Last Name</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <description>Last Name</description>
        <inlineHelpText>Please enter Last Name</inlineHelpText>
        <label>Last Name</label>
        <length>77</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local__c</fullName>
        <label>Local</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Middle_Name1__c</fullName>
        <inlineHelpText>Middle Name</inlineHelpText>
        <label>Middle Name</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Middle_Name__c</fullName>
        <description>Middle Name</description>
        <inlineHelpText>Please enter Middle Name</inlineHelpText>
        <label>Middle Name</label>
        <length>66</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NOFA_Name__c</fullName>
        <formula>NOFA_RFP_ID__r.NOFA_name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NOFO Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NOFA_RFP_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NOFO/RFP ID</label>
        <referenceTo>NOFA__c</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Name_of_Federal_Agency__c</fullName>
        <inlineHelpText>Please enter Name of Federal Agency</inlineHelpText>
        <label>Name of Federal Agency</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Options__c</fullName>
        <description>Options</description>
        <inlineHelpText>Please select the Options</inlineHelpText>
        <label>Options</label>
        <picklist>
            <controllingField>Type_of_Application__c</controllingField>
            <picklistValues>
                <fullName>A. Increase Award</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B. Decrease Award</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C. Increase Duration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D. Decrease Duration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E. Other (specify)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Organization_DUNS__c</fullName>
        <description>Organization DUNS</description>
        <inlineHelpText>Please enter Organization DUNS</inlineHelpText>
        <label>Organization DUNS</label>
        <length>13</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organizational_Affiliation__c</fullName>
        <description>Organizational Affiliation</description>
        <inlineHelpText>Please enter Organizational Affiliation</inlineHelpText>
        <label>Organizational Affiliation</label>
        <length>88</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other__c</fullName>
        <label>Other</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PDF_Url__c</fullName>
        <defaultValue>&quot;https://cns--devsb12--c.cs32.content.force.com/servlet/servlet.FileDownload?file=015r00000008uNI&quot;</defaultValue>
        <label>PDF Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Person_Accepted_Terms__c</fullName>
        <formula>$User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Person Accepted Terms</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prefix1__c</fullName>
        <inlineHelpText>Prefix</inlineHelpText>
        <label>Prefix</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prefix__c</fullName>
        <inlineHelpText>Prefix</inlineHelpText>
        <label>Prefix</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Income__c</fullName>
        <label>Program Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Program_Project__c</fullName>
        <label>Program/Project</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Title__c</fullName>
        <label>Project Title</label>
        <picklist>
            <picklistValues>
                <fullName>a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Proposed_End_Date__c</fullName>
        <inlineHelpText>Proposed End Date</inlineHelpText>
        <label>Proposed End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Proposed_Start_Date__c</fullName>
        <inlineHelpText>Proposed Start Date</inlineHelpText>
        <label>Proposed Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Province__c</fullName>
        <description>Province</description>
        <inlineHelpText>Please select Province</inlineHelpText>
        <label>Province</label>
        <length>88</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Review_by_State_per_Exec_Order12372__c</fullName>
        <label>Review by State per Exec Order 12372</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Signature_of_Authorized_Representative__c</fullName>
        <inlineHelpText>Signature of Authorized Representative</inlineHelpText>
        <label>Signature of Authorized Representative</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Application_Identifier__c</fullName>
        <description>State Application Identifier</description>
        <inlineHelpText>Please enter State Application Identifier</inlineHelpText>
        <label>State Application Identifier</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>In Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Draft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accepted</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Street_1__c</fullName>
        <formula>Account.Address_1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Street 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_2__c</fullName>
        <formula>Account.Address_2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Street 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subject_to_Review_by_State_Under_Executi__c</fullName>
        <description>Is Application Subject to Review by State Under Executive Order 12372 Process?&quot;</description>
        <inlineHelpText>Is Application Subject to Review by State Under Executive Order 12372 Process?&quot;</inlineHelpText>
        <label>Subject to Review by State Under Executi</label>
        <picklist>
            <picklistValues>
                <fullName>a. This application was made available to the State under the Executive Order 12372 Process for review on</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b. Program is subject to E.O. 12372 but has not been selected by the State for review.&quot;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>c. Program is not covered by E.O. 12372.</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Suffix1__c</fullName>
        <description>Suffix</description>
        <inlineHelpText>Suffix</inlineHelpText>
        <label>Suffix</label>
        <length>44</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Suffix__c</fullName>
        <inlineHelpText>Please enter Last Name</inlineHelpText>
        <label>Suffix</label>
        <length>33</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TOTAL__c</fullName>
        <formula>Federal__c +  Applicant1__c + Local__c + State__c + Other__c + Program_Income__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TOTAL</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Telephone_Number1__c</fullName>
        <label>Telephone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Telephone_Number__c</fullName>
        <description>Telephone Number</description>
        <inlineHelpText>Please enter your Telephone Number</inlineHelpText>
        <label>Telephone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Terms_Conditions__c</fullName>
        <defaultValue>&quot;•	Read all the instructions •	Please do not skip the instructions •	Select the checkbox •	Submit the record&quot;</defaultValue>
        <label>Terms &amp; Conditions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Title1__c</fullName>
        <description>Title</description>
        <label>Title</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <description>Title</description>
        <inlineHelpText>Please enter Title</inlineHelpText>
        <label>Title</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_of_Applicant_1__c</fullName>
        <inlineHelpText>Select Type_of_Applicant_1</inlineHelpText>
        <label>Type of Applicant 1</label>
        <picklist>
            <picklistValues>
                <fullName>A. State Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B. County Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C. City or Township Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D. Special District Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E. Regional Organization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F. U.S. Territory or Possession</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G. Independent School</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H. Public/State Controlled Institution of Higher Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I. Indian/Native American Tribal Government (Federally Recognized)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>J. Indian/Native American Tribal Government (Other than Federally Recognized)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>K. Indian/Native American Tribally Designated Organization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L. Public/Indian Housing Authority</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M. Nonprofit with 501C3 IRS Status (Other than Institution of Higher Education)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N. Nonprofit without 501C3 IRS Status (Other than Institution of Higher Education)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>O. Private Institution of Higher Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P. Individual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q. For-Profit Organization (Other than Small Business)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R. Small Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S. Hispanic-serving Institution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T. Historically Black Colleges and Universities (HBCUs)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>U. Tribally Controlled Colleges and Universities (TCCUs)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>V. Alaska Native and Native Hawaiian Serving Institutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>W. Non-domestic (non-US) Entity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>X. Other (specify)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type_of_Applicant_2__c</fullName>
        <label>Type of Applicant 2</label>
        <picklist>
            <picklistValues>
                <fullName>A. State Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B. County Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C. City or Township Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D. Special District Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E. Regional Organization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F. U.S. Territory or Possession</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G. Independent School</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H. Public/State Controlled Institution of Higher Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I. Indian/Native American Tribal Government (Federally Recognized)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>J. Indian/Native American Tribal Government (Other than Federally Recognized)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>K. Indian/Native American Tribally Designated Organization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L. Public/Indian Housing Authority</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M. Nonprofit with 501C3 IRS Status (Other than Institution of Higher Education)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N. Nonprofit without 501C3 IRS Status (Other than Institution of Higher Education)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>O. Private Institution of Higher Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P. Individual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q. For-Profit Organization (Other than Small Business)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R. Small Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S. Hispanic-serving Institution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T. Historically Black Colleges and Universities (HBCUs)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>U. Tribally Controlled Colleges and Universities (TCCUs)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>V. Alaska Native and Native Hawaiian Serving Institutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>W. Non-domestic (non-US) Entity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>X. Other (specify)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type_of_Applicant_3__c</fullName>
        <inlineHelpText>Select Type of Applicant 3</inlineHelpText>
        <label>Type of Applicant 3</label>
        <picklist>
            <picklistValues>
                <fullName>A. State Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B. County Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C. City or Township Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D. Special District Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E. Regional Organization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F. U.S. Territory or Possession</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G. Independent School</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H. Public/State Controlled Institution of Higher Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I. Indian/Native American Tribal Government (Federally Recognized)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>J. Indian/Native American Tribal Government (Other than Federally Recognized)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>K. Indian/Native American Tribally Designated Organization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L. Public/Indian Housing Authority</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M. Nonprofit with 501C3 IRS Status (Other than Institution of Higher Education)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N. Nonprofit without 501C3 IRS Status (Other than Institution of Higher Education)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>O. Private Institution of Higher Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P. Individual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q. For-Profit Organization (Other than Small Business)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R. Small Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S. Hispanic-serving Institution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T. Historically Black Colleges and Universities (HBCUs)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>U. Tribally Controlled Colleges and Universities (TCCUs)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>V. Alaska Native and Native Hawaiian Serving Institutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>W. Non-domestic (non-US) Entity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>X. Other (specify)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type_of_Application__c</fullName>
        <description>Type of Application</description>
        <inlineHelpText>Please select Type of Application</inlineHelpText>
        <label>Type of Application</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Continuation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Revision</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type_of_Submission__c</fullName>
        <description>Type of Submission</description>
        <inlineHelpText>Please select  Type of Submission</inlineHelpText>
        <label>Type of Submission</label>
        <picklist>
            <picklistValues>
                <fullName>Pre-Application</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Changed/Corrected Application</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <formula>Account.Zip1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Zip</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllActivatedContracts</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <label>All Activated Contracts</label>
    </listViews>
    <listViews>
        <fullName>AllContracts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Contracts</label>
    </listViews>
    <listViews>
        <fullName>AllDraftContracts</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>D</value>
        </filters>
        <label>All Draft Contracts</label>
    </listViews>
    <listViews>
        <fullName>AllInApprovalContracts</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>P</value>
        </filters>
        <label>All In Approval Contracts</label>
    </listViews>
    <listViews>
        <fullName>MyActivatedContracts</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <label>My Activated Contracts</label>
    </listViews>
    <listViews>
        <fullName>MyDraftContracts</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>D</value>
        </filters>
        <label>My Draft Contracts</label>
    </listViews>
</CustomObject>